[package]
authors = ["The glfw-rs developers."]
description = "GLFW3 bindings and idiomatic wrapper for Rust."
keywords = ["windowing", "opengl", "vulkan"]
license = "Apache-2.0"
name = "glfw"
readme = "README.md"
repository = "https://github.com/bjz/glfw-rs"
version = "0.58.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
bitflags = "1.0.0"
raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.0", optional = true }
raw-window-handle-0-6 = { package = "raw-window-handle", version = "0.6.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }

[dependencies.glfw-sys]
optional = true
version = "5.0.0"

[dependencies.image]
optional = true
version = "^0.25.1"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.ash]
optional = true
version = "0.38"

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dev-dependencies]
log = "0.4"

[features]
all = ["image", "vulkan", "log", "wayland", "raw-window-handle-v0-6"]
default = ["glfw-sys", "raw-window-handle-v0-6"]
with-window-handle-v0-5 = ["glfw-sys", "raw-window-handle-v0-5"]
vulkan = ["ash"]
wayland = ["glfw-sys/wayland"]
raw-window-handle-v0-6 = ["dep:raw-window-handle-0-6"]
raw-window-handle-v0-5 = ["dep:raw-window-handle-0-5"]
serde = ["dep:serde"]
