[package]
authors = ["The glfw-rs developers."]
description = "GLFW3 bindings and idiomatic wrapper for Rust."
keywords = ["windowing", "opengl", "vulkan"]
license = "Apache-2.0"
name = "glfw"
readme = "README.md"
repository = "https://github.com/bjz/glfw-rs"
version = "0.59.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
bitflags = "1.0.0"
raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.0", optional = true }
raw-window-handle-0-6 = { package = "raw-window-handle", version = "0.6.0", optional = true }
glfw-sys = {version = "*", git = "https://github.com/coderedart/glfw-sys"}


[dependencies.image]
optional = true
version = "^0.25.1"

[dependencies.log]
optional = true
version = "0.4"


[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dev-dependencies]
log = "0.4"
ash = "*"

[features]
all = ["image", "vulkan", "log", "wayland", "x11", "raw-window-handle-v0-6"]
default = ["all"]
with-window-handle-v0-5 = ["raw-window-handle-v0-5"]
vulkan = ["glfw-sys/vulkan"]
wayland = ["glfw-sys/wayland"]
x11 = ["glfw-sys/x11"]
native-handles = ["glfw-sys/native_handles"]
src-build = ["glfw-sys/src_build"]
static-link = ["glfw-sys/static_link"]
raw-window-handle-v0-6 = ["dep:raw-window-handle-0-6", "native-handles"]
raw-window-handle-v0-5 = ["dep:raw-window-handle-0-5", "native-handles"]
serde = ["dep:serde"]


[package.metadata.docs.rs]
features = ["all"]

